# PatternScout

./: .env.example  .gitignore  ISSUES.md  PRD.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: search.py
app/core/: config.py  database.py
app/models/: search.py
app/schemas/: search.py
app/scrapers/: design_sites.py  google_images.py
app/services/: clustering.py  ollama.py
frontend/: app.py
