[project]
name = "patternscout"
version = "0.1.0"
description = "AI-powered UX pattern research platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "streamlit>=1.40.0,<2.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
